--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -21,7 +21,8 @@ body {
   user-select: none;
 }
 
-.didascalia-remove {
+.didascalia-remove,
+.didascalia-duplicate {
   border: none;
   background: transparent;
   cursor: pointer;
