--- a/frontend/styles/layout.css
+++ b/frontend/styles/layout.css
@@ -4,7 +4,7 @@ body {
 
 h2 {
   margin-top: -1em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0;
 }
 
 .pericope {
@@ -14,20 +14,19 @@ h2 {
 }
 
 .didascalia {
-  padding: 1em;
   width: 6em;
+  padding: 1em 0;
+  font-size: medium;
+  text-align: center;
 }
 
-.didascalia-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.5em;
+.didascalia .address {
+  margin: 0.5em 0;
 }
 
 .didascalia-handle-group {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   gap: 0.25em;
 }
@@ -47,23 +46,23 @@ h2 {
 
 .didascalia .address.editing input,
 .didascalia .source.editing input {
-  max-width: 6em;
+  width: 100%;
   box-sizing: border-box;
 }
 
 .source-list {
-  padding: 1em;
+  padding: 0;
   position: absolute;
   top: auto;
   left: auto;
-  border-top-width: 1px;
-  border-top-style: dashed;
-  max-height: 30em;
+  border-width: 1px;
+  border-style: dashed;
+  max-height: 15em;
   overflow: auto;
 }
 
 .source-language {
-  margin-top: 1em 0;
+  padding: 0.5em;
 }
 
 .source-options {
@@ -74,8 +73,12 @@ h2 {
   margin-block-end: 0;
 }
 
+.source-option + .source-option {
+  border-top: 1px solid var(--base2);
+}
+
 .source-option {
-  padding: 0.3em 0;
+  padding: 0.5em;
 }
 
 .textus {
@@ -85,7 +88,7 @@ h2 {
 
 .cross-references {
   padding: 0;
-  margin: 0 0 1em 0;
+  margin: 0;
 }
 
 .cross-reference {
