--- a/frontend/styles/colors.css
+++ b/frontend/styles/colors.css
@@ -28,10 +28,14 @@ body {
   color: var(--base01);
 }
 
-h2,
 .cross-reference,
 .help-link {
   color: var(--blue);
+}
+
+h2 {
+  color: var(--base02);
+  text-shadow: 1px 1px var(--blue);
 }
 
 .pericope + .pericope {
