--- a/frontend/styles/layout.css
+++ b/frontend/styles/layout.css
@@ -134,38 +134,7 @@ h2 {
   margin-left: 0.4em;
 }
 
-.help-footer {
+.app-footer {
   width: 100%;
-  margin: 1em 0;
-}
-
-.help-modal-backdrop {
-  position: fixed;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1.5em;
-  z-index: 10;
-}
-
-.help-modal {
-  max-width: 40em;
-  width: 100%;
-  padding: 2em;
-  box-shadow: 0 0 1.5em rgba(0, 0, 0, 0.35);
-}
-
-.help-modal h3 {
-  margin-top: 0;
-}
-
-.help-modal ul {
-  padding-left: 1.4em;
-}
-
-.help-close {
-  margin-top: 1.5em;
-  border: none;
-  padding: 0.6em 1.2em;
+  margin: 2em 0;
 }
