--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -6,6 +6,17 @@ body {
   background-attachment: fixed;
 }
 
+.selection-ribbon {
+  position: absolute;
+  top: 0;
+  left: 75%;
+  background-color: var(--violet);
+  border-radius: 0 0 1.2em 1.2em;
+  width: 2.4em;
+  height: 4em;
+  box-shadow: 0 0.75em 1.5em rgba(0, 0, 0, 0.35);
+}
+
 .pericope + .pericope {
   border-top-width: 1px;
   border-top-style: dashed;
