--- a/frontend/styles/layout.css
+++ b/frontend/styles/layout.css
@@ -94,7 +94,8 @@ h2 {
 }
 
 
-.cross-references {
+.cross-references,
+.commentaries {
   padding: 0 0.5em;
   margin: 0;
 }
@@ -102,11 +103,6 @@ h2 {
 .cross-reference {
   cursor: pointer;
   margin: 0.3em 0;
-}
-
-.commentaries {
-  padding: 0 0.5em;
-  margin: 0;
 }
 
 .commentary-marker {
