--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,3 +1,4 @@
+@font-face { font-family: greek; src: url(newathu.ttf); }
 body {
   background-image: url(./logo.svg);
   background-repeat: no-repeat;
@@ -113,6 +114,7 @@ body {
 
 .textus {
   flex: 1;
+  font-family: greek;
 }
 
 .cross-references {
