--- a/frontend/styles/colors.css
+++ b/frontend/styles/colors.css
@@ -104,6 +104,13 @@ input {
   background-color: var(--base2);
 }
 
+.story-title {
+  text-decoration-style: dotted;
+  text-decoration-thickness: 1px;
+  text-decoration-line: underline;
+  text-decoration-color: var(--magenta);
+}
+
 .cross-references-loading,
 .cross-references-empty,
 .commentary,
