--- a/frontend/styles/layout.css
+++ b/frontend/styles/layout.css
@@ -77,7 +77,7 @@ h2 {
 }
 
 .source-option + .source-option {
-  border-top: 1px solid var(--base2);
+  border-top: 1px solid var(--panel-background);
 }
 
 .source-option {
@@ -128,6 +128,10 @@ h2 {
 
 .verse + .verse::before {
   margin-left: 0.4em;
+}
+
+.verse s::before {
+  content: "#";
 }
 
 .app-footer {
