--- a/frontend/styles/layout.css
+++ b/frontend/styles/layout.css
@@ -3,7 +3,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5em;
 }
 
 h2 {
@@ -126,13 +125,8 @@ h2 {
   gap: 1em;
   max-width: 70em;
   width: 100%;
-  margin: 0 auto;
+  margin: 0.5em auto;
   align-items: flex-start;
-}
-
-.pericope + .pericope {
-  border-top-width: 1px;
-  border-top-style: dashed;
 }
 
 .didascalia {
