--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -107,3 +107,16 @@ body {
 .verse s::before {
   content: "#";
 }
+
+.note-header {
+  cursor: grab;
+  user-select: none;
+}
+
+.note-header:active {
+  cursor: grabbing;
+}
+
+.note-add {
+  user-select: none;
+}
